--- a/index.html
+++ b/index.html
@@ -68,9 +68,32 @@
 									</div>
 									<div class="p-4 align-self-end">
 									  	Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo blanditiis corrupti harum voluptas asperiores vero.
-									 </div>
-			  					</div>
-			 				    </div>
+									</div>
+			  				</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="card bg-primary text-center card-form">
+										<div class="card-body">
+											<h3>Sign Up Today</h3>
+											<p>Please fill out this form to register</p>
+											<form>
+												<div class="form-group">
+													<input type="text" class="form-control form-control-lg" placeholder="Username">
+												</div>
+												<div class="form-group">
+													<input type="email" class="form-control form-control-lg" placeholder="Email">
+												</div>
+												<div class="form-group">
+													<input type="password" class="form-control form-control-lg" placeholder="Password">
+												</div>
+												<div class="form-group">
+													<input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
+												</div>
+												<input type="submit" value="submit" class="btn btn-outline-light btn-block">
+											</form>
+										</div>
+									</div>
+								</div>
       			 	</div>
       			</div>
       		</div>
