--- a/index.html
+++ b/index.html
@@ -146,6 +146,109 @@
 			</div>
 		</div>
 	</section>
+	<!-- Create Head -->
+	<section id="create-head-section" class="bg-primary">
+		<div class="container">
+			<div class="row">
+				<div class="col text-center py-5">
+					<h1 class="display-4">Create</h1>
+					<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, et. Similique facilis modi nesciunt ex, inventore voluptas
+						sit non provident dolore qui est reiciendis, suscipit voluptates, perferendis numquam eaque deleniti.</p>
+					<a href="#" class="btn btn-outline-light">Find Out More</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Create section -->
+	<section id="create-section" class="py-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 order-2">
+					<img src="img/create-section1.jpg" class="img-fluid mb-3 rounded-circle">
+				</div>
+				<div class="col-md-6 order-1">
+					<h3>Create your passion</h3>
+					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio harum maxime similique magnam voluptas corrupti
+						rem consequuntur cum officiis? </p>
+					<div class="d-flex">
+						<div class="p-4 align-self-start">
+							<i class="fas fa-check fa-2x"></i>
+						</div>
+						<div class="p-4 align-self-end">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aliquam eum necessitatibus dignissimos esse id.
+						</div>
+					</div>
+					<div class="d-flex">
+						<div class="p-4 align-self-start">
+							<i class="fas fa-check fa-2x"></i>
+						</div>
+						<div class="p-4 align-self-end">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aliquam eum necessitatibus dignissimos esse id.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Share Head -->
+	<section id="share-head-section" class="bg-primary">
+		<div class="container">
+			<div class="row">
+				<div class="col text-center py-5">
+					<h1 class="display-4">Share</h1>
+					<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa, et. Similique facilis modi nesciunt ex, inventore voluptas
+						sit non provident dolore qui est reiciendis, suscipit voluptates, perferendis numquam eaque deleniti.</p>
+					<a href="#" class="btn btn-outline-light">Find Out More</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Share section -->
+	<section id="share-section" class="bg-light text-muted py-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<img src="img/share-section1.jpg" class="img-fluid mb-3 rounded-circle">
+				</div>
+				<div class="col-md-6">
+					<h3>Share what you create</h3>
+					<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio harum maxime similique magnam voluptas corrupti
+						rem consequuntur cum officiis? </p>
+					<div class="d-flex">
+						<div class="p-4 align-self-start">
+							<i class="fas fa-check fa-2x"></i>
+						</div>
+						<div class="p-4 align-self-end">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aliquam eum necessitatibus dignissimos esse id.
+						</div>
+					</div>
+					<div class="d-flex">
+						<div class="p-4 align-self-start">
+							<i class="fas fa-check fa-2x"></i>
+						</div>
+						<div class="p-4 align-self-end">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aliquam eum necessitatibus dignissimos esse id.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- footer -->
+	<footer id="main-footer" class="bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col text-center py-4">
+					
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	
 
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	  crossorigin="anonymous"></script>
