--- a/index.html
+++ b/index.html
@@ -242,11 +242,47 @@
 		<div class="container">
 			<div class="row">
 				<div class="col text-center py-4">
-					
+					<h3>MyLoop</h3>
+					<p>copyright &copy;
+					<span id="year"></span></p>
+					<button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">Contact Us</button>
 				</div>
 			</div>
 		</div>
 	</footer>
+
+	<!-- Contact Modal -->
+	<div class="modal fade text-dark" id="contactModal">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title">Contact Us</h5>
+				  <button class="close" data-dismiss="modal">
+					<span>&times;</span>
+				  </button>
+				</div>
+				<div class="modal-body">
+				  <form>
+					<div class="form-group">
+					  <label for="name">Name</label>
+					  <input type="text" class="form-control">
+					</div>
+					<div class="form-group">
+					  <label for="email">Email</label>
+					  <input type="email" class="form-control">
+					</div>
+					<div class="form-group">
+					  <label for="message">Message</label>
+					  <textarea class="form-control"></textarea>
+					</div>
+				  </form>
+				</div>
+				<div class="modal-footer">
+				  <button class="btn btn-primary btn-block">Submit</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
 
 	
 
