--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<title>Bootstrap Social Media</title>
 </head>
 
-<body>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<body data-spy="scroll" data-target="#main-nav" id="home"> 
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
 		<div class="container">
 			<a href="index.html" class="navbar-brand">MyLoop</a>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -296,6 +296,9 @@
 	<script>
 		// Get the current year for the copyright
 		$('#year').text(new Date().getFullYear());
+
+		//Init scrollspy
+		$('body').scrollspy({target: "#main-nav"});
 	</script>
 </body>
 
